--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<link href="css/styles.css" rel="stylesheet">
 	
 	<!-- Favicon  -->
-    <link rel="icon" href="images/ROR_logo.svg">
+    <link rel="icon" href="images/2023-12-19 09.22.54.jpg">
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
     
@@ -51,7 +51,7 @@
             <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Sync</a> -->
 
             <!-- Image Logo -->
-            <a class="navbar-brand logo-image" href="index.html"><img src="images/ROR_logo.svg" alt="alternative"></a> 
+            <a class="navbar-brand logo-image" href="index.html"><img src="images/UTime-logo.svg" alt="alternative"></a> 
             <!-- Mobile Menu Toggle Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-awesome fas fa-bars"></span>
@@ -76,7 +76,7 @@
                     <!-- end of dropdown menu -->
                 </ul>
                 <span class="nav-item">
-                    <a class="btn-outline-sm page-scroll" href="application-ed292bb6-9a39-4ea0-9cc1-a8602554fcc3.apk">DOWNLOAD</a>
+                    <a class="btn-outline-sm page-scroll" href="#">DOWNLOAD</a>
                 </span>
             </div>
         </div> <!-- end of container -->
@@ -90,10 +90,10 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="text-container">
-                        <h1>Rule Of Routine </h1>
-                        <p class="p-large p-heading"> Achieve your goals with this time management app. Turn your dreams into an orderly reality and track your goals step by step.</p>
-                        <a class="btn-solid-lg" href="https://discord.gg/28rxsy4N" target="_blank"><i class="fab fa-discord"></i> DISCORD</a>
-                        <a class="btn-solid-lg" href="application-ed292bb6-9a39-4ea0-9cc1-a8602554fcc3.apk"><i class="fab fa-google-play"></i>DOWNLOAD</a>
+                        <h1>UTime </h1>
+                        <p class="p-large p-heading"> <h3>We Reinvent Focus.</h3><br>Be Different Feels Productivity Everyday</p>
+                        <a class="btn-solid-lg" href="https://discord.gg/x9rr46mz" target="_blank"><i class="fab fa-discord"></i> DISCORD</a>
+                        <a class="btn-solid-lg" href="#"><i class="fab fa-google-play"></i>DOWNLOAD</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
